# cli

./: .gitignore  Cargo.toml  README.md  docker-compose.yaml  whatever.txt
.github/workflows/: api-release.yaml  cli-release.yaml  daneel-lint.yaml  daneel-release.yaml
api/: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
api/libs/: README
api/src/main/docker/: Dockerfile.jvm  Dockerfile.legacy-jar
api/src/main/kotlin/org/bismuth/: BismuthPanacheCompanionInterface.kt  SentryEnricher.kt
api/src/main/kotlin/org/bismuth/auth/entities/: APIKeyEntity.kt  OrganizationEntity.kt  SubscriptionEntity.kt  UserEntity.kt  UserOrgViews.kt
api/src/main/kotlin/org/bismuth/auth/resources/: AuthDenialResource.kt  AuthResource.kt  OrganizationResource.kt
api/src/main/kotlin/org/bismuth/billing/entities/: HourlyUsage.kt
api/src/main/kotlin/org/bismuth/projects/: BismuthGitServlet.kt  VCSServiceClient.kt
api/src/main/kotlin/org/bismuth/projects/entities/: ChatMessageEntity.kt  ChatSessionEntity.kt  FeatureConfigEntity.kt  FeatureEntity.kt  FileEntity.kt  GenerationAnalysisEntity.kt  GenerationTraceEntity.kt  ProjectEntity.kt
api/src/main/kotlin/org/bismuth/projects/resources/: FeatureResource.kt  ProjectResource.kt
api/src/main/kotlin/org/bismuth/projects/services/: DaneelClient.kt  ProjectService.kt
api/src/main/resources/: application.properties
api/src/main/resources/db/migration/: V1.0.0__api.sql
api/src/main/resources/keycloak/: bismuth-dev-realm.json
cli/: Cargo.toml  README.md
cli/src/: api.rs  bismuth_toml.rs  chat.rs  cli.rs  main.rs
daneel/: .gitignore  Dockerfile  README.md  pyproject.toml  serving.py
daneel/daneel/: constants.py
daneel/daneel/agents/: basic_chat_subgraph.py  common.py  graph_agent.py  repo_edit_subgraph_interactive.py
daneel/daneel/data/: bismuth_config.py  file_rpc.py
daneel/daneel/data/graph_rag/: __init__.py  code_indexing.py  graph.py  hybrid_search.py
daneel/daneel/data/postgres/: models.py
daneel/daneel/executors/: graph_chat_executor.py  greeter_executor.py  summary_executor.py
daneel/daneel/executors/aci/: __init__.py  aci_interactive_driver_executor.py  aci_types.py  visualization.py
daneel/daneel/executors/aci/prompts/: __init__.py  constrained.py
daneel/daneel/services/: billing.py  tracing_inference_client.py
daneel/daneel/services/code_analysis/: __init__.py  test_api.py
daneel/daneel/services/code_analysis/analysis/: __init__.py  calls.py  comments.py  debug.py  imports.py  langs.py  location.py  playground.py  repo.py  scopes.py  slicing.py  source_file.py  symbols.py  test_scopes.py  test_symbols.py  test_util.py  tree_helpers.py
daneel/daneel/services/code_analysis/analysis/test_fixtures/: imports.py  simple.c  simple.cpp  simple.cs  simple.go  simple.java  simple.php  simple.rb  simple.rs  simple_scopes.js  simple_scopes.py  simple_symbols.js  simple_symbols.py  slice.py  thing.json  thing.md  thing.toml  thing.yaml
daneel/daneel/utils/: __init__.py  glob_match.py  repo.py  tracing.py  websockets.py
daneel/tests/: test_aci.py  test_graph_rag.py  test_streaming_filtering.py
db/: init.sql
src/: api.rs  bismuth_toml.rs  chat.rs  cli.rs  main.rs  tree.rs
