[package]
name = "cli"
version = "0.0.7-dev"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.5.4", features = ["derive", "string"]}
reqwest = {version = "0.12.4", features = ["json", "rustls-tls"], default-features=false}
tokio = { version = "1.24.2", features = ["full"] }
futures = "0.3.25"
serde = { version = "1.0.152", features = ["derive"] }
anyhow = { version = "1.0.86", features = ["backtrace"]}
serde_json = "1.0.117"
url = "2.5.0"
reqwest-eventsource = "0.6.0"
log = "0.4.21"
env_logger = "0.11.3"
clap-verbosity-flag = "2.2.0"
dirs = "5.0.1"
tokio-util = "0.7.11"
tiny_http = "0.12.0"
base64 = "0.22.1"
git-version = "0.3.9"
colored = "2.1.0"
