[package]
name = "cli"
version = "0.3.2-dev"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.5.4", features = ["derive", "string"]}
reqwest = {version = "0.12.4", features = ["json", "rustls-tls"], default-features=false}
tokio = { version = "1.24.2", features = ["full"] }
futures = "0.3.25"
serde = { version = "1.0.152", features = ["derive"] }
anyhow = { version = "1.0.86", features = ["backtrace"]}
serde_json = "1.0.117"
url = "2.5.0"
reqwest-eventsource = "0.6.0"
log = "0.4.21"
env_logger = "0.11.3"
clap-verbosity-flag = "2.2.0"
dirs = "5.0.1"
tokio-util = "0.7.11"
tiny_http = "0.12.0"
base64 = "0.22.1"
git-version = "0.3.9"
colored = "2.1.0"
tokio-tungstenite = { version = "0.23.1", features = ["native-tls"]}
futures-channel = "0.3.30"
regex = "1.10.6"
markdown = "1.0.0-alpha.19"
lazy-regex = "3.2.0"
git2 = { version = "0.19.0", default-features = false, features = ["https", "vendored-openssl"]}
ratatui = { version = "0.28.0", features = ["unstable-rendered-line-info"]}
open = "5.3.0"
syntect = "5.2.0"
two-face = "0.4.0"
textwrap = "0.16.1"
tui-textarea = "0.6.0"
once_cell = "1.19.0"
termios = "0.3.3"
clap-markdown = "0.1.4"
copypasta = "0.10.1"
derivative = "2.2.0"
tokio-stream = {version = "0.1.16", features = ["io-util"]}
toml = "0.8.19"
globset = {version = "0.4.15", features = ["serde1"]}

[dev-dependencies]
tempfile = "3.12.0"
